# projects

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  entities.json  mempalace.yaml  skills-lock.json
AI-Agentic-Security/: AI Security Idea and Prompt.txt  AI Security.txt  Brief about the idea:  CRN_Agentic_AI_Startups_2026.xlsx  CRN_Agentic_AI_Startups_2026_v2.xlsx  CRN_Agentic_AI_Startups_2026_v3.xlsx  Pinaka_Architecture_Document_v1.1.docx  Pinaka_HLD_v1.1.docx  Pinaka_LLD_v1.0.docx  Pinaka_LLD_v1.1.docx  pinaka_board_memo.md  (+7 more)
daily_crypto_news/daily_market_report/: .gitignore  README.md  pyproject.toml
daily_crypto_news/daily_market_report/config/: assets.yaml
daily_crypto_news/daily_market_report/src/daily_market_report/: config_loader.py  main.py
daily_crypto_news/daily_market_report/src/daily_market_report/crews/content_crew/: content_crew.py
daily_crypto_news/daily_market_report/src/daily_market_report/crews/content_crew/config/: agents.yaml  tasks.yaml  tasks_lite.yaml
daily_crypto_news/daily_market_report/src/daily_market_report/models/: __init__.py  snapshot.py
daily_crypto_news/daily_market_report/src/daily_market_report/report/: __init__.py  export.py  render.py  sparkline.py  styles.css  template.html
daily_crypto_news/daily_market_report/src/daily_market_report/tools/: __init__.py  cache.py  market_data.py  news_rss.py  technicals.py  validate.py
daily_crypto_news/daily_market_report/src/daily_market_report/tools/providers/: __init__.py  google_finance.py  yahoo.py
daily_crypto_news/daily_market_report/tests/: test_technicals.py
(+189 files in other folders)
